; ModuleID = '/home/carl/AnghaBench/8cc/extr_gen.c_pop_xmm.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_gen.c_pop_xmm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SAVE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"movsd (#rsp), #xmm%d\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"add $8, #rsp\00", align 1
@stackpos = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @pop_xmm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pop_xmm(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @SAVE, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %4)
  %6 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %7 = load i64, i64* @stackpos, align 8
  %8 = sub nsw i64 %7, 8
  store i64 %8, i64* @stackpos, align 8
  %9 = load i64, i64* @stackpos, align 8
  %10 = icmp sge i64 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  ret void
}

declare dso_local i32 @emit(i8*, ...) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
